# tidy-repo

./: .editorconfig  .gitignore  Cargo.toml  README.md
tidy-repo-cli/: Cargo.toml
tidy-repo-cli/src/: cli_results.rs  lib.rs  main.rs
tidy-repo-cli/src/application/: application_service.rs  error.rs  mod.rs  repository_host.rs  repository_url.rs
tidy-repo-cli/src/application/authentication/: filesystem_persistence.rs  github_authentication_token.rs  github_authentication_validation.rs  mod.rs
tidy-repo-cli/src/application/repository/: branch.rs  github_repository_provider.rs  mod.rs  repository_url.rs
tidy-repo-cli/src/domain/: authentication_persistence.rs  branch.rs  count_branches.rs  error.rs  mod.rs  repository.rs  repository_host.rs  value_object.rs
tidy-repo-cli/src/domain/authentication/: mod.rs  (+5 more)
tidy-repo-cli/src/ports/: mod.rs
tidy-repo-cli/src/utils/: mod.rs
tidy-repo-cli/tests/: testing.rs
tidy-repo-cli/tests/authenticate/: fails_to_authenticate_with_github_when_app_home_directory_does_not_exist.rs  mod.rs
tidy-repo-cli/tests/basic/: mod.rs
tidy-repo-cli/tests/branches/: counts_branches_in_multiple_github_repositories.rs  counts_branches_in_private_github_repository.rs  counts_branches_in_single_github_repository.rs  fails_to_find_private_repositories_when_not_authenticated.rs  fails_when_passed_a_malformed_repository_url.rs  fails_when_passed_repository_url_missing_owner.rs  fails_when_passed_repository_url_missing_repo_name.rs  mod.rs  returns_empty_results_when_not_passed_any_repository_urls.rs
tidy-repo-cli/tests/common/: mod.rs
(+130 files in other folders)
